--- a/final/project_web/week6/week6_vowpal_wabbit.ipynb
+++ b/final/project_web/week6/week6_vowpal_wabbit.ipynb
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -1253,13 +1253,13 @@
    "source": [
     "# Поменяйте на свой путь\n",
     "#PATH_TO_MOVIE_DATA = 'C://Users//Evtisov_SS//Documents//GitHub//Coursera-machine-learning//final//project_web//week6//imdb'\n",
-    "PATH_TO_MOVIE_DATA = 'C:/Users/Evtisov_SS/Documents/GitHub/Coursera-machine-learning/final/project_web/week6/imdb'\n",
+    "PATH_TO_MOVIE_DATA = 'C://temp//aclImdb'\n",
     "#/Users/y.kashnitsky/Yandex.Disk.localized/ML/data/imdb_reviews'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -1280,18 +1280,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of documents in training data: 0\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "Cannot cast array data from dtype('float64') to dtype('int64') according to the rule 'safe'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-40-c43c2aaaa7c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Number of documents in training data: %d\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtext_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbincount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: Cannot cast array data from dtype('float64') to dtype('int64') according to the rule 'safe'"
+      "Number of documents in training data: 25000\n",
+      "[12500 12500]\n"
      ]
     }
    ],
@@ -1309,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -1339,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -1350,7 +1340,7 @@
        "b\"Zero Day leads you to think, even re-think why two boys/young men would do what they did - commit mutual suicide via slaughtering their classmates. It captures what must be beyond a bizarre mode of being for two humans who have decided to withdraw from common civility in order to define their own/mutual world via coupled destruction.<br /><br />It is not a perfect movie but given what money/time the filmmaker and actors had - it is a remarkable product. In terms of explaining the motives and actions of the two young suicide/murderers it is better than 'Elephant' - in terms of being a film that gets under our 'rationalistic' skin it is a far, far better film than almost anything you are likely to see. <br /><br />Flawed but honest with a terrible honesty.\""
       ]
      },
-     "execution_count": 26,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1361,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -1372,7 +1362,7 @@
        "1"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -1394,7 +1384,7 @@
        "b'Words can\\'t describe how bad this movie is. I can\\'t explain it by writing only. You have too see it for yourself to get at grip of how horrible a movie really can be. Not that I recommend you to do that. There are so many clich\\xc3\\xa9s, mistakes (and all other negative things you can imagine) here that will just make you cry. To start with the technical first, there are a LOT of mistakes regarding the airplane. I won\\'t list them here, but just mention the coloring of the plane. They didn\\'t even manage to show an airliner in the colors of a fictional airline, but instead used a 747 painted in the original Boeing livery. Very bad. The plot is stupid and has been done many times before, only much, much better. There are so many ridiculous moments here that i lost count of it really early. Also, I was on the bad guys\\' side all the time in the movie, because the good guys were so stupid. \"Executive Decision\" should without a doubt be you\\'re choice over this one, even the \"Turbulence\"-movies are better. In fact, every other movie in the world is better than this one.'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -1416,7 +1406,7 @@
        "0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -1445,7 +1435,7 @@
        "'1 |text words can describe how bad this movie can explain writing only you have too see for yourself get grip how horrible movie really can not that recommend you that there are many clich xc3 xa9s mistakes and all other negative things you can imagine here that will just make you cry start with the technical first there are lot mistakes regarding the airplane won list them here but just mention the coloring the plane they didn even manage show airliner the colors fictional airline but instead used 747 painted the original boeing livery very bad the plot stupid and has been done many times before only much much better there are many ridiculous moments here that lost count really early also was the bad guys side all the time the movie because the good guys were stupid executive decision should without doubt you choice over this one even the turbulence movies are better fact every other movie the world better than this one\\n'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1463,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -1476,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -1487,7 +1477,7 @@
        "(17500, 7500)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,36 +1488,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "with open(os.path.join(PATH_TO_MOVIE_DATA, 'movie_reviews_train.vw'), 'w') as vw_train_data:\n",
+    "with open(os.path.join(PATH_TO_MOVIE_DATA, 'movie_reviews_train.vw'), 'w', encoding='utf-8') as vw_train_data:\n",
     "    for text, target in zip(train, train_labels):\n",
     "        vw_train_data.write(to_vw_format(str(text), 1 if target == 1 else -1))\n",
-    "with open(os.path.join(PATH_TO_MOVIE_DATA, 'movie_reviews_valid.vw'), 'w') as vw_train_data:\n",
+    "with open(os.path.join(PATH_TO_MOVIE_DATA, 'movie_reviews_valid.vw'), 'w', encoding='utf-8') as vw_train_data:\n",
     "    for text, target in zip(valid, valid_labels):\n",
     "        vw_train_data.write(to_vw_format(str(text), 1 if target == 1 else -1))\n",
-    "with open(os.path.join(PATH_TO_MOVIE_DATA, 'movie_reviews_test.vw'), 'w') as vw_test_data:\n",
+    "with open(os.path.join(PATH_TO_MOVIE_DATA, 'movie_reviews_test.vw'), 'w', encoding='utf-8') as vw_test_data:\n",
     "    for text in text_test:\n",
     "        vw_test_data.write(to_vw_format(str(text)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1 |text zero day leads you think even think why two boys young men would what they did commit mutual suicide via slaughtering their classmates captures what must beyond bizarre mode being for two humans who have decided withdraw from common civility order define their own mutual world via coupled destruction not perfect movie but given what money time the filmmaker and actors had remarkable product terms explaining the motives and actions the two young suicide murderers better than elephant terms being film that gets under our rationalistic skin far far better film than almost anything you are likely see flawed but honest with terrible honesty\r\n",
-      "-1 |text words can describe how bad this movie can explain writing only you have too see for yourself get grip how horrible movie really can not that recommend you that there are many clich xc3 xa9s mistakes and all other negative things you can imagine here that will just make you cry start with the technical first there are lot mistakes regarding the airplane won list them here but just mention the coloring the plane they didn even manage show airliner the colors fictional airline but instead used 747 painted the original boeing livery very bad the plot stupid and has been done many times before only much much better there are many ridiculous moments here that lost count really early also was the bad guys side all the time the movie because the good guys were stupid executive decision should without doubt you choice over this one even the turbulence movies are better fact every other movie the world better than this one\r\n"
+      "\"head\" ­Ґ пў«пҐвбп ў­гваҐ­­Ґ© Ё«Ё ў­Ґи­Ґ©\n",
+      "Є®¬ ­¤®©, ЁбЇ®«­пҐ¬®© Їа®Ја ¬¬®© Ё«Ё Ї ЄҐв­л¬ д ©«®¬.\n"
      ]
     }
    ],
@@ -1588,22 +1578,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "final_regressor = /Users/y.kashnitsky/Yandex.Disk.localized/ML/data/imdb_reviews/movie_reviews_model.vw\n",
+      "final_regressor = C://temp//aclImdb/movie_reviews_model.vw\n",
       "Num weight bits = 18\n",
       "learning rate = 0.5\n",
       "initial_t = 0\n",
       "power_t = 0.5\n",
       "using no cache\n",
-      "Reading datafile = /Users/y.kashnitsky/Yandex.Disk.localized/ML/data/imdb_reviews/movie_reviews_train.vw\n",
+      "Reading datafile = C://temp//aclImdb/movie_reviews_train.vw\n",
       "num sources = 1\n",
       "average  since         example        example  current  current  current\n",
       "loss     last          counter         weight    label  predict features\n",
@@ -1636,7 +1626,7 @@
     }
    ],
    "source": [
-    "!vw -d $PATH_TO_MOVIE_DATA/movie_reviews_train.vw \\\n",
+    "!\"C:\\\\Program Files\\\\VowpalWabbit\\\\vw.exe\" -d $PATH_TO_MOVIE_DATA/movie_reviews_train.vw \\\n",
     "--loss_function hinge -f $PATH_TO_MOVIE_DATA/movie_reviews_model.vw"
    ]
   },
@@ -1652,23 +1642,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
       "only testing\n",
-      "predictions = /Users/y.kashnitsky/Yandex.Disk.localized/ML/data/imdb_reviews/movie_valid_pred.txt\n",
+      "predictions = C://temp//aclImdb/movie_valid_pred.txt\n",
       "Num weight bits = 18\n",
       "learning rate = 0.5\n",
       "initial_t = 0\n",
       "power_t = 0.5\n",
       "using no cache\n",
-      "Reading datafile = /Users/y.kashnitsky/Yandex.Disk.localized/ML/data/imdb_reviews/movie_reviews_valid.vw\n",
+      "Reading datafile = C://temp//aclImdb/movie_reviews_valid.vw\n",
       "num sources = 1\n",
       "average  since         example        example  current  current  current\n",
       "loss     last          counter         weight    label  predict features\n",
@@ -1699,7 +1689,7 @@
     }
    ],
    "source": [
-    "!vw -i $PATH_TO_MOVIE_DATA/movie_reviews_model.vw \\\n",
+    "!\"C:\\\\Program Files\\\\VowpalWabbit\\\\vw.exe\" -i $PATH_TO_MOVIE_DATA/movie_reviews_model.vw \\\n",
     "-t -d $PATH_TO_MOVIE_DATA/movie_reviews_valid.vw \\\n",
     "-p $PATH_TO_MOVIE_DATA/movie_valid_pred.txt"
    ]
@@ -1713,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -1747,23 +1737,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
       "only testing\n",
-      "predictions = /Users/y.kashnitsky/Yandex.Disk.localized/ML/data/imdb_reviews/movie_test_pred.txt\n",
+      "predictions = C://temp//aclImdb/movie_test_pred.txt\n",
       "Num weight bits = 18\n",
       "learning rate = 0.5\n",
       "initial_t = 0\n",
       "power_t = 0.5\n",
       "using no cache\n",
-      "Reading datafile = /Users/y.kashnitsky/Yandex.Disk.localized/ML/data/imdb_reviews/movie_reviews_test.vw\n",
+      "Reading datafile = C://temp//aclImdb/movie_reviews_test.vw\n",
       "num sources = 1\n",
       "average  since         example        example  current  current  current\n",
       "loss     last          counter         weight    label  predict features\n",
@@ -1794,14 +1784,14 @@
     }
    ],
    "source": [
-    "!vw -i $PATH_TO_MOVIE_DATA/movie_reviews_model.vw \\\n",
+    "!\"C:\\\\Program Files\\\\VowpalWabbit\\\\vw.exe\" -i $PATH_TO_MOVIE_DATA/movie_reviews_model.vw \\\n",
     "-t -d $PATH_TO_MOVIE_DATA/movie_reviews_test.vw \\\n",
     "-p $PATH_TO_MOVIE_DATA/movie_test_pred.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -1833,23 +1823,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
       "Generating 2-grams for all namespaces.\n",
-      "final_regressor = /Users/y.kashnitsky/Yandex.Disk.localized/ML/data/imdb_reviews/movie_reviews_model2.vw\n",
+      "final_regressor = C://temp//aclImdb/movie_reviews_model2.vw\n",
       "Num weight bits = 18\n",
       "learning rate = 0.5\n",
       "initial_t = 0\n",
       "power_t = 0.5\n",
       "using no cache\n",
-      "Reading datafile = /Users/y.kashnitsky/Yandex.Disk.localized/ML/data/imdb_reviews/movie_reviews_train.vw\n",
+      "Reading datafile = C://temp//aclImdb/movie_reviews_train.vw\n",
       "num sources = 1\n",
       "average  since         example        example  current  current  current\n",
       "loss     last          counter         weight    label  predict features\n",
@@ -1882,30 +1872,30 @@
     }
    ],
    "source": [
-    "!vw -d $PATH_TO_MOVIE_DATA/movie_reviews_train.vw \\\n",
+    "!\"C:\\\\Program Files\\\\VowpalWabbit\\\\vw.exe\" -d $PATH_TO_MOVIE_DATA/movie_reviews_train.vw \\\n",
     "--loss_function hinge --ngram 2 -f $PATH_TO_MOVIE_DATA/movie_reviews_model2.vw"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
       "Generating 2-grams for all namespaces.\n",
       "only testing\n",
-      "predictions = /Users/y.kashnitsky/Yandex.Disk.localized/ML/data/imdb_reviews/movie_valid_pred2.txt\n",
+      "predictions = C://temp//aclImdb/movie_valid_pred2.txt\n",
       "Num weight bits = 18\n",
       "learning rate = 0.5\n",
       "initial_t = 0\n",
       "power_t = 0.5\n",
       "using no cache\n",
-      "Reading datafile = /Users/y.kashnitsky/Yandex.Disk.localized/ML/data/imdb_reviews/movie_reviews_valid.vw\n",
+      "Reading datafile = C://temp//aclImdb/movie_reviews_valid.vw\n",
       "num sources = 1\n",
       "average  since         example        example  current  current  current\n",
       "loss     last          counter         weight    label  predict features\n",
@@ -1936,14 +1926,14 @@
     }
    ],
    "source": [
-    "!vw -i $PATH_TO_MOVIE_DATA/movie_reviews_model2.vw \\\n",
+    "!\"C:\\\\Program Files\\\\VowpalWabbit\\\\vw.exe\" -i $PATH_TO_MOVIE_DATA/movie_reviews_model2.vw \\\n",
     "-t -d $PATH_TO_MOVIE_DATA/movie_reviews_valid.vw \\\n",
     "-p $PATH_TO_MOVIE_DATA/movie_valid_pred2.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -1968,24 +1958,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
       "Generating 2-grams for all namespaces.\n",
       "only testing\n",
-      "predictions = /Users/y.kashnitsky/Yandex.Disk.localized/ML/data/imdb_reviews/movie_test_pred2.txt\n",
+      "predictions = C://temp//aclImdb/movie_test_pred2.txt\n",
       "Num weight bits = 18\n",
       "learning rate = 0.5\n",
       "initial_t = 0\n",
       "power_t = 0.5\n",
       "using no cache\n",
-      "Reading datafile = /Users/y.kashnitsky/Yandex.Disk.localized/ML/data/imdb_reviews/movie_reviews_test.vw\n",
+      "Reading datafile = C://temp//aclImdb/movie_reviews_test.vw\n",
       "num sources = 1\n",
       "average  since         example        example  current  current  current\n",
       "loss     last          counter         weight    label  predict features\n",
@@ -2016,14 +2006,14 @@
     }
    ],
    "source": [
-    "!vw -i $PATH_TO_MOVIE_DATA/movie_reviews_model2.vw \\\n",
+    "!\"C:\\\\Program Files\\\\VowpalWabbit\\\\vw.exe\" -i $PATH_TO_MOVIE_DATA/movie_reviews_model2.vw \\\n",
     "-t -d $PATH_TO_MOVIE_DATA/movie_reviews_test.vw \\\n",
     "-p $PATH_TO_MOVIE_DATA/movie_test_pred2.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
